[gd_scene load_steps=10 format=3 uid="uid://dvueuso1kqybe"]

[ext_resource type="Script" path="res://Fridge.gd" id="1_12d5g"]
[ext_resource type="Texture2D" uid="uid://cijb85w87ixut" path="res://Fridge.jpg" id="3_xff3q"]
[ext_resource type="Texture2D" uid="uid://se5iwcbu15ia" path="res://fridgebackground.png" id="4_8lh3a"]
[ext_resource type="AudioStream" uid="uid://de83sj2no0dya" path="res://562294-colorscrimsontears-click_mRrswwXk.wav" id="4_8qtko"]
[ext_resource type="Texture2D" uid="uid://cjlrn0fjo46fk" path="res://fridgerack.png" id="5_byo5v"]
[ext_resource type="Texture2D" uid="uid://cnoa6ywxd7302" path="res://pear.png" id="6_f03ql"]
[ext_resource type="Texture2D" uid="uid://ckm8in6xo576k" path="res://Fridge2.png" id="6_tojyv"]
[ext_resource type="Texture2D" uid="uid://cgrhvjker1j68" path="res://fridgerack2.png" id="6_x4hux"]
[ext_resource type="Texture2D" uid="uid://bsxu8axr5pyq8" path="res://laatjes.png" id="7_tx2rw"]

[node name="Fridge" type="Node2D"]
script = ExtResource("1_12d5g")

[node name="TextEdit" type="TextEdit" parent="."]
offset_right = 1156.0
offset_bottom = 652.0
text = "Fridge Placeholder"
editable = false

[node name="Placeholder and Old" type="Node2D" parent="."]

[node name="FridgePlaceholder" type="Sprite2D" parent="Placeholder and Old"]
visible = false
position = Vector2(467, 327.5)
scale = Vector2(2.29902, 1.06046)
texture = ExtResource("3_xff3q")

[node name="Fridge2" type="Sprite2D" parent="Placeholder and Old"]
visible = false
position = Vector2(395, 327.25)
scale = Vector2(0.395, 0.32725)
texture = ExtResource("6_tojyv")

[node name="FinalAssets" type="Node2D" parent="."]

[node name="Fridgebackground" type="Sprite2D" parent="FinalAssets"]
position = Vector2(321.5, 327.5)
scale = Vector2(0.3215, 0.3275)
texture = ExtResource("4_8lh3a")

[node name="FridgerackTop" type="Sprite2D" parent="FinalAssets"]
position = Vector2(324, 84)
scale = Vector2(0.652, 0.82)
texture = ExtResource("5_byo5v")

[node name="FridgerackBottom" type="Sprite2D" parent="FinalAssets"]
visible = false
position = Vector2(394, 464)
scale = Vector2(0.82, 0.82)
texture = ExtResource("5_byo5v")
flip_v = true

[node name="FridgerackMiddle" type="Sprite2D" parent="FinalAssets"]
position = Vector2(311.833, 265)
scale = Vector2(0.608334, 0.756667)
texture = ExtResource("6_x4hux")

[node name="Laatjes" type="Sprite2D" parent="FinalAssets"]
position = Vector2(313.5, 548)
scale = Vector2(0.241667, 0.22975)
texture = ExtResource("7_tx2rw")

[node name="ClickSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_8qtko")
volume_db = 10.0

[node name="Items" type="Node2D" parent="."]

[node name="Item1" type="Button" parent="Items"]
offset_left = 43.0
offset_top = -19.0
offset_right = 2091.0
offset_bottom = 1989.0
scale = Vector2(0.07, 0.07)
icon = ExtResource("6_f03ql")

[node name="Item2" type="Button" parent="Items"]
offset_left = 228.0
offset_top = 7.0
offset_right = 392.0
offset_bottom = 115.0
text = "Item"

[node name="Item3" type="Button" parent="Items"]
offset_left = 420.0
offset_top = 7.0
offset_right = 584.0
offset_bottom = 115.0
text = "Item"

[node name="Item4" type="Button" parent="Items"]
offset_left = 418.0
offset_top = 326.0
offset_right = 582.0
offset_bottom = 434.0
text = "Item"

[node name="Item5" type="Button" parent="Items"]
offset_left = 306.0
offset_top = 171.0
offset_right = 470.0
offset_bottom = 279.0
text = "Item"

[node name="Item6" type="Button" parent="Items"]
offset_left = 89.0
offset_top = 165.0
offset_right = 253.0
offset_bottom = 273.0
text = "Item"

[node name="Item7" type="Button" parent="Items"]
offset_left = 56.0
offset_top = 337.0
offset_right = 220.0
offset_bottom = 445.0
text = "Item"

[node name="Item8" type="Button" parent="Items"]
offset_left = 242.0
offset_top = 339.0
offset_right = 406.0
offset_bottom = 447.0
text = "Item"

[connection signal="pressed" from="Items/Item1" to="." method="_on_item_1_pressed"]
[connection signal="pressed" from="Items/Item2" to="." method="_on_item_2_pressed"]
[connection signal="pressed" from="Items/Item3" to="." method="_on_item_3_pressed"]
[connection signal="pressed" from="Items/Item4" to="." method="_on_item_4_pressed"]
[connection signal="pressed" from="Items/Item5" to="." method="_on_item_5_pressed"]
[connection signal="pressed" from="Items/Item6" to="." method="_on_item_6_pressed"]
[connection signal="pressed" from="Items/Item7" to="." method="_on_item_7_pressed"]
[connection signal="pressed" from="Items/Item8" to="." method="_on_item_8_pressed"]
